# Crawlext

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
aggregation/: __init__.py  weekly_report.py
configs/: arxiv_queries.yaml  crawler.yaml  rl_taxonomy.yaml  sources.yaml
crawler/: __init__.py  items.py  middlewares.py  pipelines.py  settings.py
crawler/spiders/: __init__.py  arxiv_rl_spider.py  blog_spider.py
crawler/utils/: __init__.py  arxiv_client.py  config.py  html_extraction.py  rl_classification.py  scoring.py  text_cleaning.py  time_utils.py
data/normalized/: papers_2025-11-26.jsonl  papers_2025-12-04.jsonl  papers_2025-12-10.jsonl  papers_2025-12-18.jsonl  papers_2025-12-27.jsonl  papers_2026-01-03.jsonl
data/reports/: weekly_report_2025-11-26.md  weekly_report_2025-12-04.md  weekly_report_2025-12-10.md  weekly_report_2025-12-18.md  weekly_report_2025-12-27.md  weekly_report_2026-01-03.md
scripts/: generate_weekly_report.py  run_all_crawls.py  run_arxiv_crawl.py  run_blog_crawl.py
tests/: test_arxiv_client.py  test_rl_classification.py  test_scoring.py  test_weekly_report.py
